hphp/test/quick/parse_fail_shapes.php.expectf

Fatal error: syntax error, unexpected T_DOUBLE_ARROW, expecting T_DOUBLE_COLON in %s on line 5
